# pcmanfm-qt

./: .gitignore  CHANGELOG  CMakeLists.txt  HACKING.md  README.md  REMOVED_FEATURES.md  TODO.md  ctags.funcs.json  hex.md  imagemagick.md  lsan.supp
cmake/: config.h.in
config/pcmanfm-qt/lxqt/: settings.conf.in
docs/: conversion-status.md  libfm-usage-analysis.md  remaining-conversion-work.md
libfm/: CMakeLists.txt
libfm-qt/: CMakeLists.txt
libfm-qt/src/: CMakeLists.txt  appchoosercombobox.cpp  appchoosercombobox.h  appchooserdialog.cpp  appchooserdialog.h  applaunchcontext.cpp  applaunchcontext.h  appmenuview.cpp  appmenuview.h  appmenuview_p.h  bookmarkaction.cpp  bookmarkaction.h  browsehistory.cpp  browsehistory.h  cachedfoldermodel.cpp  cachedfoldermodel.h  colorbutton.cpp  colorbutton.h  createnewmenu.cpp  createnewmenu.h  customaction_p.h  dirtreemodel.cpp  dirtreemodel.h  dirtreemodelitem.cpp  dirtreemodelitem.h  dirtreeview.cpp  dirtreeview.h  dndactionmenu.cpp  dndactionmenu.h  dnddest.cpp  dnddest.h  editbookmarksdialog.cpp  editbookmarksdialog.h  execfiledialog.cpp  execfiledialog_p.h  filedialog.cpp  filedialog.h  filedialog_p.h  filedialoghelper.cpp  filedialoghelper.h  (+60 more)
libfm-qt/src/core/: archiver.cpp  archiver.h  basicfilelauncher.cpp  basicfilelauncher.h  bookmarks.cpp  bookmarks.h  cstrptr.h  deletejob.cpp  deletejob.h  dirlistjob.cpp  dirlistjob.h  filechangeattrjob.cpp  filechangeattrjob.h  fileinfo.cpp  fileinfo.h  fileinfo_p.h  folder.h  (+45 more)
libfm/src/: fm-gtk.c  fm-seal.h  fm.c  fm.h  glib-compat.c  glib-compat.h  gtk-compat.h
libfm/src/base/: fm-action.c  fm-action.h  fm-app-info.c  fm-archiver.c  fm-archiver.h  fm-bookmarks.c  fm-bookmarks.h  fm-config.c  fm-config.h  fm-dummy-monitor.c  fm-dummy-monitor.h  fm-file-info.c  fm-file-info.h  fm-file-launcher.c  fm-file-launcher.h  fm-file.c  fm-file.h  fm-folder-config.c  fm-folder-config.h  fm-folder.c  fm-folder.h  fm-icon.c  fm-icon.h  fm-list.c  fm-list.h  fm-mime-type.c  fm-mime-type.h  fm-module.c  fm-module.h  fm-monitor.c  fm-monitor.h  fm-nav-history.c  fm-nav-history.h  fm-path.c  fm-path.h  fm-templates.c  fm-templates.h  fm-terminal.c  fm-terminal.h  fm-thumbnail-loader.c  (+5 more)
libfm/src/demo/: libfm-demo.c  main-win-ui.c  main-win.c  main-win.h
libfm/src/extra/: fm-xml-file.c  fm-xml-file.h
libfm/src/gio/: fm-app-lookup.c  fm-app-lookup.h  module.c
libfm/src/gtk/: fm-app-chooser-combo-box.c  fm-app-chooser-combo-box.h  fm-app-chooser-dlg.c  fm-app-chooser-dlg.h  fm-app-menu-view.c  fm-app-menu-view.h  fm-cell-renderer-pixbuf.c  fm-cell-renderer-pixbuf.h  fm-cell-renderer-text.c  fm-cell-renderer-text.h  fm-clipboard.c  fm-clipboard.h  fm-dir-tree-model.c  fm-dir-tree-model.h  fm-dir-tree-view.c  fm-dir-tree-view.h  fm-dnd-auto-scroll.c  fm-dnd-auto-scroll.h  fm-dnd-dest.c  fm-dnd-dest.h  fm-dnd-src.c  fm-dnd-src.h  fm-file-menu.c  fm-file-menu.h  fm-file-properties.c  fm-file-properties.h  fm-file-search-ui.c  fm-folder-model.c  fm-folder-model.h  fm-folder-view.c  fm-folder-view.h  fm-gtk-file-launcher.c  fm-gtk-file-launcher.h  fm-gtk-utils.c  fm-gtk-utils.h  fm-icon-pixbuf.c  fm-icon-pixbuf.h  fm-menu-tool-item.c  fm-menu-tool-item.h  fm-path-bar.c  (+18 more)
libfm/src/gtk/exo/: exo-icon-view.c  exo-icon-view.h  exo-marshal.c  exo-marshal.h  exo-private.c  exo-private.h  exo-string.c  exo-string.h  exo-tree-view.c  exo-tree-view.h  test.c
libfm/src/job/: fm-deep-count-job.c  fm-deep-count-job.h  fm-dir-list-job.c  fm-dir-list-job.h  fm-file-info-job.c  fm-file-info-job.h  fm-file-ops-job-change-attr.c  fm-file-ops-job-change-attr.h  fm-file-ops-job-delete.c  fm-file-ops-job-delete.h  fm-file-ops-job-xfer.c  fm-file-ops-job-xfer.h  fm-file-ops-job.c  fm-file-ops-job.h  fm-job.c  fm-job.h  fm-simple-job.c  fm-simple-job.h
libfm/src/modules/: gtk-fileprop-x-desktop.c  gtk-fileprop-x-shortcut.c  gtk-menu-actions.c  gtk-menu-trash.c  vfs-menu.c  vfs-search.c
libfm/src/tests/: libfm-file-search-cli-demo.c  test-fm-path.c
libfm/src/tools/: libfm-pref-apps.c  lxshortcut.c
libfm/src/udisks/: dbus-utils.c  dbus-utils.h  fm-udisks.c  fm-udisks.h  g-udisks-device.c  g-udisks-device.h  g-udisks-drive.c  g-udisks-drive.h  g-udisks-mount.c  g-udisks-mount.h  g-udisks-volume-monitor.c  g-udisks-volume-monitor.h  g-udisks-volume.c  g-udisks-volume.h  udisks-device.h  udisks.h
menu-cache/: CMakeLists.txt
menu-cache/libmenu-cache/: menu-cache.c  test.c  version.h
menu-cache/menu-cache-daemon/: menu-cached.c
menu-cache/menu-cache-gen/: main.c  menu-compose.c  menu-merge.c  menu-tags.h
pcmanfm/: CMakeLists.txt  application.cpp  application.h  autorundialog.cpp  autorundialog.h  bulkrename.cpp  bulkrename.h  connectserverdialog.cpp  connectserverdialog.h  createlauncherdialog.cpp  createlauncherdialog.h  hiddenshortcutsdialog.cpp  hiddenshortcutsdialog.h  image_viewer_window.cpp  image_viewer_window.h  imagemagick_qt.cpp  imagemagick_qt.h  imagemagick_support.cpp  imagemagick_support.h  launcher.cpp  launcher.h  main-win.ui  mainwindow.cpp  mainwindow.h  mainwindow_bookmarks.cpp  mainwindow_dragdrop.cpp  mainwindow_events.cpp  mainwindow_fileops.cpp  mainwindow_menus.cpp  mainwindow_navigation.cpp  mainwindow_pathbar.cpp  mainwindow_tabs.cpp  mainwindow_view.cpp  mainwindow_viewframe.cpp  org.pcmanfm.Application.xml  pcmanfm.cpp  preferences.ui  preferencesdialog.cpp  settings.cpp  settings.h  (+8 more)
src/core/: archive_extract.cpp  archive_extract.h  backend_registry.cpp  backend_registry.h  fs_ops.cpp  fs_ops.h  ifileops.h  windowed_file_reader.cpp  windowed_file_reader.h
src/panel/: panel.h
src/ui/: archiveextractjob.cpp  binarydocument.cpp  binarydocument.h  color_delegate.cpp  disasm_engine.cpp  disasm_engine.h  disasmmodel.cpp  disasmmodel.h  disassemblywindow.cpp  disassemblywindow.h  filepropertiesdialog.cpp  filepropertiesdialog.h  hexdocument.cpp  hexdocument.h  hexeditorview.cpp  hexeditorview.h  hexeditorwindow.cpp  hexeditorwindow.h  pathbar.cpp  pathbar.h  sidepane.cpp  sidepane.h
tests/: CMakeLists.txt  archive_extract_test.cpp  disasm_engine_test.cpp  windowed_file_reader_test.cpp
(+24 files in other folders)
